--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,29 @@
     transform: rotate(360deg);
   }
 }
+
+.todo-item {
+  color: black;
+  background-color: white;
+  border-radius: 10px;
+  margin-top: 5px;
+  padding: 10px;
+  width: 400px;
+  text-align: left;
+  font-size: 20px;
+}
+
+.task-line {
+  padding: 0;
+  margin: 1px;
+}
+
+.list-app {
+  display: flex;
+  flex-direction: column; /* Aligns todo-items vertically */
+  align-items: center; /* Centers todo-items horizontally */
+}
+
+.left-btn {
+  margin-right: 5px;
+}
